--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cosmos-lib": "^1.1.0",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
+    "vue-google-charts": "^0.3.3",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vuetify": "^2.6.1",
