--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@cosmjs/stargate": "^0.27.1",
+    "@dansmaculotte/nuxt-security": "^0.0.5",
     "@nuxtjs/axios": "^5.13.6",
     "bech32": "^2.0.0",
     "core-js": "^3.19.3",
